fixes border for out of bounds region

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
-.background {
-  background-color: rgb(32, 32, 32);
-  min-height: 100vh;
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow: auto;
-}
 .appBar {
   display: flex;
   align-items: flex-end;
